--- a/mvvm-foundation/app/src/main/res/values/strings.xml
+++ b/mvvm-foundation/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="selected">Selected</string>
+    <string name="error_please_try_again_later">Error! Please try again later</string>
+    <string name="try_again">Try again</string>
 
 </resources>
