--- a/mvvm-foundation/app/src/main/res/values/strings.xml
+++ b/mvvm-foundation/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="selected">Selected</string>
     <string name="error_please_try_again_later">Error! Please try again later</string>
     <string name="try_again">Try again</string>
+    <string name="error_happened">Error happened</string>
 
 </resources>
